<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <LinearLayout
    android:id="@+id/x"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">
    
    <Spinner
     android:id="@+id/destinacije"
     android:layout_width="0dip"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:prompt="@string/destinacije" />

     <Button style="?android:attr/buttonBarButtonStyle"
         android:id="@+id/igrajIgru"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:prompt="@string/igrajIgru"
         android:text="@string/igraButton" />
     
     <Button style="?android:attr/buttonBarButtonStyle"
         android:id="@+id/skenirajQR"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:prompt="@string/igrajIgru"
         android:text="@string/skenirajQR" />
     
     </LinearLayout>
    
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.MapFragment" />

</LinearLayout>